[gd_scene load_steps=3 format=2]

[ext_resource path="res://Font/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/GameScore.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Score" type="ColorRect" parent="."]
margin_left = 70.0
margin_top = 35.0
margin_right = 250.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="Score"]
margin_left = 40.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Score"]
margin_left = 40.0
margin_top = 30.0
margin_right = 80.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Score"]
margin_left = 40.0
margin_top = 50.0
margin_right = 80.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Score"]
margin_left = 40.0
margin_top = 70.0
margin_right = 80.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
valign = 1

[node name="Label5" type="Label" parent="Score"]
margin_left = 40.0
margin_top = 90.0
margin_right = 80.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_1" type="Label" parent="Score"]
margin_left = 80.0
margin_top = 10.0
margin_right = 130.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_2" type="Label" parent="Score"]
margin_left = 80.0
margin_top = 30.0
margin_right = 130.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_3" type="Label" parent="Score"]
margin_left = 80.0
margin_top = 50.0
margin_right = 130.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_4" type="Label" parent="Score"]
margin_left = 80.0
margin_top = 70.0
margin_right = 130.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Label_5" type="Label" parent="Score"]
margin_left = 80.0
margin_top = 90.0
margin_right = 130.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 35.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back"]
margin_right = 60.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<ESC> 
TO RETURN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
